[package]
name = "traxex"
license = "MIT"
version = "0.2.0"
edition = "2018"
authors = ["Zhishan Zhang<zhangzhishanlo@gmail.com>"]
description = "A library to download files through url link."
repository = "https://github.com/zhangzhishan/traxex/tree/master"
readme = "README.md"

[lib]
name = "lib_traxex"
path = "src/lib.rs"

[[bin]]
name = "traxex"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive", "env", "wrap_help"] }
reqwest = {version = "0.12.7", features = ["blocking"]}
indicatif = "0.17.8"
tracing = "0.1"
